实现房间的分页列表和详情 (#9)
* 实现房间的分页列表和详情

* feat：加入了public_id逻辑，修改invite_code为buddy_code
